# hw3-Lurgon

./: README.md  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  tests_util.py
