[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "LIGO Tools: functions for reading and analyzing gravitational wave data"
authors = [
    { name = "Logan Krause", email = "logankrause@berkeley.edu" },
    { name = "Ligo Scientific Collaboration", email = "email@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "jupyter",
    "ipython",
    "pandas",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ligotools"]